syntax = "proto3";

package order;

message CreateOrderRequest {
    string productId = 1;
    int32 quantity = 2;
    string userId = 3;
}
  
message CreateOrderResponse {
    int32 status = 1;
    repeated string error = 2;
    string id = 3;
}

service OrderService {
    rpc Create(CreateOrderRequest) returns(CreateOrderResponse) {}
}