syntax = "proto3";

package product;

message CreateProductRequest {
    string name = 1;
    string sku = 2;
    int32 stock = 3;
    double price = 4;
}
  
message CreateProductResponse {
    int32 status = 1;
    repeated string error = 2;
    string id = 3;
}

message Product {
  string id = 1;
  string name = 2;
  string sku = 3;
  int32 stock = 4;
  double price = 5;
}

message FindOneRequest {
  string id = 1;
}

message FindOneResponse {
  int32 status = 1;
  repeated string error = 2;
  Product data = 3;
}
  
message DecreaseStockRequest {
  string id = 1;
}

message DecreaseStockResponse {
  int32 status = 1;
  repeated string error = 2;
}

service ProductService {
  rpc Create(CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindById(FindOneRequest) returns (FindOneResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
}